--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lite-server": "^2.5.3",
     "minimist": "^1.2.5",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "yargs-parser": "^20.2.0"
   }
 }
